# MCP-SSE-Custom-Server

./: Dockerfile  Dockerfile.mcp  Dockerfile.sse  Makefile  README.md  docker-compose-README.md  docker-compose.yml  pyproject.toml  run_mcp_container.sh  sample_claude_config.json
app/: main.py  mcp_server.py  mcp_sse.py  sse.py
