[project]
name = "mcp-sse-custom-server"
version = "0.1.0"
description = "A custom server implementation using FastAPI and Server-Sent Events (SSE) with MCP (Message Control Protocol) for real-time communication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp>=1.6.0",
    "uvicorn>=0.34.0",
]
